task-2-kubernetes/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop
  labels:
    app.kubernetes.io/part-of: devsecops-task-2
