task-2-kubernetes/manifests/03-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: shop
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: shop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
