task-2-kubernetes/manifests/05-podinfo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: shop
  labels:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: shop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 9898
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9797
      targetPort: metrics
      protocol: TCP
