task-2-kubernetes/manifests/06-podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: shop
  labels:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: shop
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
