task-2-kubernetes/manifests/07-redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-podinfo-to-redis-only
  namespace: shop
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: shop
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/component: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: podinfo
              app.kubernetes.io/component: web
      ports:
        - protocol: TCP
          port: 6379
